ADD: affiliate search
